Some Changes and Some Bug Fixed

--- a/Client/client.html
+++ b/Client/client.html
@@ -70,7 +70,7 @@
 						if(sub[0] == "BP")
 							ball.setPosition(parseInt(sub[1]), parseInt(sub[2]));
 						else if(sub[0] == "S0")
-							score.score = parseInt(sub[1]);
+							score.setScore(parseInt(sub[1]));
 					}
 				});
 
